# open-trcc

./: .gitignore  CMakeLists.txt  README.md  build.bat
example/: build.bat  helloworld.cpp
examples/: helloworld.cpp
include/: trcc.h
src/: trcc.cpp
